--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         android:layout_marginStart="140dp"
         android:layout_marginLeft="140dp"
         android:layout_marginTop="138dp"
+        android:onClick="photoClick"
         android:text="Aparat"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="221dp" />
@@ -53,5 +54,17 @@
         android:text="Gra"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="358dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="146dp"
+        android:layout_marginLeft="146dp"
+        android:layout_marginTop="193dp"
+        app:srcCompat="@mipmap/ic_launcher" />
 
 </RelativeLayout>
