--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -16,4 +16,16 @@
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
        />
+
+    <Button
+        android:id="@+id/buttonPlayAgain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="199dp"
+        android:onClick="backToMainActivityClick"
+        android:text="Play Again"
+        android:visibility="gone" />
 </RelativeLayout>
